fix: remove overflow from new button css

--- a/src/components/dashboard/dashboard.css
+++ b/src/components/dashboard/dashboard.css
@@ -11,7 +11,6 @@
   justify-content: normal;
   padding: 25px 50px;
   font-size: 25px;
-  overflow: auto;
 }
 
 .dropdown-choices {
